--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -5,7 +5,7 @@ permalink: /dev/271d86/
 ---
 # 开发软件和配置分享
 
-分享一些自己收藏的技术书籍和好用的软件，有需求的朋友可以点进来看一下。
+分享一些自己好用的软件和网址，记录一些开发者必备的傻瓜式配置，方便忘记的时候快速找到。
 
 ## 软件
 
@@ -19,7 +19,9 @@ permalink: /dev/271d86/
 8. 免费好用的 Markdown 编辑器 [Mark Text](https://marktext.app/)；
 9. 开源免费的图床工具，支持多种存储方式，下载地址 [uPic](https://github.com/gee1k/uPic/releases)；
 10. 开源免费的 kubernetes IDE 开发工具和可视化 Dashboard [Lens](https://github.com/lensapp/lens)；
-11. Zookeeper GUI 工具，[下载地址](https://github.com/vran-dev/PrettyZoo/releases)；
+11. Zookeeper GUI 工具 [PrettyZoo](https://github.com/vran-dev/PrettyZoo/releases)；
+12. 免费的接口管理和调试工具 [ApiFox](https://www.apifox.cn/)；
+13. 一个免费的 mac 软件下载网址[麦克搜](https://www.imacso.com/)；
 
 ## 配置
 
@@ -33,16 +35,6 @@ permalink: /dev/271d86/
 配置如下图：
 
 ![KZgCg2](https://qiqiang.oss-cn-hangzhou.aliyuncs.com/muan/KZgCg2.jpg)
-
-### brew 安装
-
-推荐这个仓库 <https://gitee.com/cunkai/HomebrewCN>。
-
-一键安装并设置国内镜像源
-
-```shell
-/bin/zsh -c "$(curl -fsSL https://gitee.com/cunkai/HomebrewCN/raw/master/Homebrew.sh)"
-```
 
 ### zsh 安装配置
 
@@ -63,10 +55,18 @@ sh -c "$(curl -fsSL https://gitee.com/mirrors/oh-my-zsh/raw/master/tools/install
 ```shell
 vim .zshrc
 ```
-编辑主题
+配置主题样式名称
 ```text
 ZSH_THEME="steeef"
 ```
 
+### brew 安装
 
+推荐这个仓库 <https://gitee.com/cunkai/HomebrewCN>。
+
+一键安装并设置国内镜像源
+
+```shell
+/bin/zsh -c "$(curl -fsSL https://gitee.com/cunkai/HomebrewCN/raw/master/Homebrew.sh)"
+```
 
