--- a/docs/linux/10.Linux简单有趣的命令.md
+++ b/docs/linux/10.Linux简单有趣的命令.md
@@ -14,8 +14,11 @@ permalink: /linux/db53d7/
 
 nc 可以建立 TCP 连接
 
-```bash
-$ nc localhost 6379
+```shell
+nc localhost 6379
+```
+连接后可以执行命令
+```text
 set name jonkee
 +OK
 get name
@@ -25,36 +28,35 @@ jonkee
 
 ### telnet 端口测试
 
-```bash
-$ telnet mycloud 3306
+```shell
+telnet mycloud 3306
 ```
 
 ### ssh & sshpass 服务器连接
 
 生成密钥对
 
-```bash
+```shell
 # -t 指定加密算法
 # -b 指定密钥的二进制位数
 # -C 注释
-$ ssh-keygen -t rsa -b 4096 -C "qiqiangvae@foxmail.com"
+ssh-keygen -t rsa -b 4096 -C "qiqiangvae@foxmail.com"
 # 查看生成的密钥对
-$ ls ~/.ssh/
-id_rsa  id_rsa.pub
+ls ~/.ssh/
 ```
 
 上传公钥。也可以在服务器上创建一个`~/.ssh/authorized_keys`文件，并修改权限为664，然后在将本地客户端内`id_rsa.pub`的内容复制进去。
 
-```bash
+```shell
 # -i 指定公钥文件
-$ ssh-copy-id -i ~/.ssh/id_rsa.pub username@host
+ssh-copy-id -i ~/.ssh/id_rsa.pub username@host
 ```
 
 ssh 命令可以连接服务器，但是连接服务器的时候要输入密码，而sshpass可以免去手动输入密码的操作。
 
-```bash
-$ ssh -p 22 {username}@{ip}
-$ sshpass -p {password} ssh -p 22 {username}@{ip}
+```shell
+ssh -p 22 {username}@{ip}
+sshpass -p {password} ssh -p 22 {username}@{ip}
 ```
 
 ssh 还可以实现跳板机隧道功能。
@@ -62,38 +64,38 @@ ssh 还可以实现跳板机隧道功能。
 如本机 **Local** 想要访问 **Server** 的 **Port** 端口，但是 **Server** 是在内网，无法访问，但是跳板机 **Jump** 可以访问 **Server**，而 **Local**
 可以访问跳板机，此时可以使用ssh实现隧道功能。
 
-```bash
+```shell
 # 要输入 jump 跳板机密码
-$ ssh -N -f -L {localPort}:{ServerIP}:{ServerPort} {JumpUsername}@{JumpIP}
+ssh -N -f -L {localPort}:{ServerIP}:{ServerPort} {JumpUsername}@{JumpIP}
 # 使用sshpass免去输入跳板机密码过程
-$ sshpass -p {JumpPass} ssh -N -f -L {localPort}:{ServerIP}:{ServerPort} {JumpUsername}@{JumpIP}
+sshpass -p {JumpPass} ssh -N -f -L {localPort}:{ServerIP}:{ServerPort} {JumpUsername}@{JumpIP}
 ```
 
 此时连接 Local 的 localPort 就可以连接上 Server 的 ServerPort 了。
 
 通过跳板机连接服务器，然后依次输入跳板机和服务器的密码。
 
-```bash
-$ ssh {ServerUsername}@{ServerIP} -p 22 -o ProxyCommand='ssh -p 22 {JumpUsername}@{JumpIP} -W %h:%p'
+```shell
+ssh {ServerUsername}@{ServerIP} -p 22 -o ProxyCommand='ssh -p 22 {JumpUsername}@{JumpIP} -W %h:%p'
 ```
 
 ### curl 网络请求客户端
 
 curl 命令可以用来发送 web 请求。
 
-```bash
+```shell
 # 发送 get 请求
-$ curl https://www.baidu.com
+curl https://www.baidu.com
 # 头信息
-$ curl -H 'Authorization:mytoken' https://www.baidu.com
+curl -H 'Authorization:mytoken' https://www.baidu.com
 # 发送 cookie
-$ curl -b 'name=jonkee;sex=1' https://www.baidu.com
+curl -b 'name=jonkee;sex=1' https://www.baidu.com
 # 存储响应 cookie
-$ curl -c resp_cookie.txt https://www.baidu.com
+curl -c resp_cookie.txt https://www.baidu.com
 # 发送 POST 请求
-$ curl -X POST -d '{"username":"user","password":"pass"}' https://xxx.com/login
+curl -X POST -d '{"username":"user","password":"pass"}' https://xxx.com/login
 # 保存响应信息
-$ curl -o resp.txt https://www.baidu.com
+curl -o resp.txt https://www.baidu.com
 ```
 
 | 使用           | 符号   | 说明           |
@@ -111,9 +113,9 @@ $ curl -o resp.txt https://www.baidu.com
 
 在服务器之间复制文件和目录。`scp fileName user@ip:fileName2`。
 
-```bash
+```shell
 # 将 demo.log 复制到服务器的 /home/dc2-user 目录下
-$ scp demo.log dc2-user@mycloud:/home/dc2-user
+scp demo.log dc2-user@mycloud:/home/dc2-user
 ```
 
 如果是复制目录，则需要加上参数`-r`
@@ -122,17 +124,17 @@ $ scp demo.log dc2-user@mycloud:/home/dc2-user
 
 masscan 和 nmap 都可以扫描服务器开放的端口，nmap 可以扫描域名，masscan不可以。masscan 扫描速度比 nmap 快很多。
 
-```bash
-$ sudo masscan -p1-65535 xxx.xxx.xx.xxx
-$ sudo nmap -sS -Pn -p1-65535 www.baidu.com
+```shell
+sudo masscan -p1-65535 xxx.xxx.xx.xxx
+sudo nmap -sS -Pn -p1-65535 www.baidu.com
 ```
 
 ### tcpdump 抓包工具
 
 tcpdump 命令可以抓取指定网卡的指定ip和端口的数据包。
 
-```bash
-$ tcpdump -A dst xxx.xxx.x.xxx and port 3306 -w redis_dump.dump
+```shell
+tcpdump -A dst xxx.xxx.x.xxx and port 3306 -w redis_dump.dump
 ```
 
 ## 文本命令
@@ -143,23 +145,24 @@ xargs 的作用是将标准输入转为命令行参数。
 
 简单的案例
 
-```bash
-$ echo "1.txt 2.txt 3.txt" | xargs touch
-$ ls
-1.txt 2.txt 3.txt
+```shell
+echo "1.txt 2.txt 3.txt" | xargs touch
 ```
 
 使用 xargs 批量删除redis key。以下命令的意思是，先找出所有的 key，然后通过 xargs 命令将结果用空格分开，然后删除。
 
-```bash
-$ redis-cli -a password -h localhost -p 6379 keys "*" | xargs redis-cli -a password -h localhost -p 6379 del
+```shell
+redis-cli -a password -h localhost -p 6379 keys "*" | xargs redis-cli -a password -h localhost -p 6379 del
 ```
 
 默认情况下 xargs 会将输入用空格或者换行符分割，也可以用 -d 指定分割符。
 
-```bash
+```shell
 # -e 表示解释转义字符
-$ echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
+echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
+```
+输出
+```text
 韩信 李白 百里守约
 ```
 
@@ -170,29 +173,54 @@ $ echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
 
 ### awk
 
-```bash
-# 每行按空格或TAB分割，输出文本中的1、4项
-$ awk '{print $1,$4}' log.txt
-# 输出 java 进程的 pid
-$ ps -ef|grep java|awk '{print $2}'
-67396
-69344
-75192
-# -F 指定分隔符为 =
-$ awk -F '=' '{print $1,$2}' txt
-k1 1
-k2 2
-$ -v 设置变量
-$ awk -F '=' -v p=2 '{print $1,$2,$2+p}' txt
-# 只输出第列的值等于2的行
-$ awk -F '=' '{if ($2 == 2) print $1,$2}' txt
-k2 2
-# 按=分割并去重
-$ awk -F '=' '{print $3}' filename |awk '!a[$0]++'
-# 多个分隔符，并按字段分组找出所有个数大于 1 的
-$ awk -F '[|][$][|]' '{count[$10]++;} END {for(i in count) { if (count[i]>1){print i,count[i]}}}' filename
+1. 每行按空格或TAB分割，输出文本中的1、4项；
+    ```shell
+    awk '{print $1,$4}' log.txt
+    ```
 
-```
+2. 输出 java 进程的 pid；
+    ```text
+    ps -ef|grep java|awk '{print $2}'
+    ```
+    输出
+    ```text
+    67396
+    69344
+    75192
+    ```
+3. **-F** 指定分隔符；
+    
+    ```shell
+    # -F 指定分隔符为 =
+    awk -F '=' '{print $1,$2}' file.txt
+    ```
+    
+4. **-v** 设置变量；
+
+   ```shell
+   awk -F '=' -v p=2 '{print $1,$2,$2+p}' file.txt
+   ```
+
+5. 指定列；
+
+   ```shell
+   # 只输出第列的值等于2的行
+   awk -F '=' '{if ($2 == 2) print $1,$2}' file.txt
+   ```
+
+6. 去重；
+
+    ```shell
+    # 按=分割并去重
+    $ awk -F '=' '{print $3}' filename |awk '!a[$0]++'
+    ```
+
+7. 分组；
+
+    ```shell
+    # 多个分隔符，并按字段分组找出所有个数大于 1 的
+    $ awk -F '[|][$][|]' '{count[$10]++;} END {for(i in count) { if (count[i]>1){print i,count[i]}}}' filename
+    ```
 
 NF 代表当前行有多少个字段，即 NF-1代表倒数第二个字段。
 
@@ -203,14 +231,14 @@ NR 代表当前行数。
 查找显示行号
 
 ```shell
-$ grep -n 'search_txt' filename
+grep -n 'search_txt' filename
 ```
 
 ### sed 文本编辑命令
 
 替换字符串
 
-```bash
+```shell
 $ sed 's/原字符串/替换字符串/g'
 ```
 
@@ -221,19 +249,19 @@ $ sed 's/原字符串/替换字符串/g'
 
 ```shell
 # 删除第 N 行
-$ sed -i '.bak' 'Nd' filename
+sed -i '.bak' 'Nd' filename
 # 删除第 N-M 行
-$ sed -i '.bak' 'N,Md' filename
+sed -i '.bak' 'N,Md' filename
 ```
 
 截取行数
 
-```bash
-$ sed -n '1,10p' filename
+```shell
+sed -n '1,10p' filename
 # 截取第1行到第10行并输出到另一个文件
-$ sed -n '1,10p' filename > new_filename
+sed -n '1,10p' filename > new_filename
 # 截取第11行到文件末尾并输出到另一个文件中
-$ sed -n '11,$p' filename > new_filename
+sed -n '11,$p' filename > new_filename
 ```
 
 ### wc 文本统计
@@ -242,7 +270,7 @@ $ sed -n '11,$p' filename > new_filename
 - -l 或 --lines 显示行数。
 - -w 或 --words 只显示字数。
 
-```bash
+```shell
 wc -l filename
 ```
 
@@ -294,15 +322,15 @@ wc -l filename
 
 加`-z` 表示 gzip，`-c`压缩，`-x`解压，`-v`显示过程。
 
-```bash
+```shell
 # 从文件 foo 和 bar 创建归档文件 archive.tar。
-$ tar -cf archive.tar foo bar  
+tar -cf archive.tar foo bar  
 # 详细列举归档文件 archive.tar 中的所有文件。
-$ tar -tvf archive.tar         
+tar -tvf archive.tar         
 # 展开归档文件 archive.tar 中的所有文件。
-$ tar -xf archive.tar   
+tar -xf archive.tar   
 # 解压到指定文件夹
-$ tar -xf archive.tar -C targetDir
+tar -xf archive.tar -C targetDir
 ```
 
 ## 其它命令
@@ -311,21 +339,21 @@ $ tar -xf archive.tar -C targetDir
 
 no hang up 不挂断。
 
-```bash
-$ nohup command > myout.log 2>&1 &  
+```shell
+nohup command > myout.log 2>&1 &  
 ```
 
-- 0 标准输入
+- 0 标准输入；
 
-- 1 标准输出
+- 1 标准输出；
 
-- 2 标准错误
+- 2 标准错误；
 
 `2>&1` 是将标准错误`2`重定向到标准输出`&1`，`&1`再重定向到`myout.log`中。
 
 编写一个脚本`nohup_demo.sh`循环打印。
 
-```bash
+```shell
 count=0
 while [ $count -lt "100" ]; do
     echo 'hello muan'
@@ -336,7 +364,7 @@ done
 
 测试
 
-```bash
+```shell
 # 启动
 $ nohup sh nohup_demo.sh > demo.log 2>&1 &
 80306
@@ -354,7 +382,7 @@ $ kill -9 80306
 
 mv 命令可以用来移动文件和改名，那么什么时候是移动文件什么时候是改名呢
 
-```bash
+```shell
 # 新建两个文件夹
 $ mkdir d1 d2
 # 在d1里面新建两个文件
