--- a/docs/cloudNative/docker/10.docker基本使用.md
+++ b/docs/cloudNative/docker/10.docker基本使用.md
@@ -14,7 +14,7 @@ Docker 是一个开源的应用容器引擎，基于 Go 语言 并遵从Apache2.
 # 快速上手
 
 ```bash
-$ docker run hello-world
+docker run hello-world
 ```
 
 # 入门篇
@@ -50,26 +50,26 @@ $ docker run hello-world
 - 查看所有容器`docker ps -a`
 
 ```bash
-$ docker ps -aq
+docker ps -aq
 ```
 
 - 运行/停止/删除 已存在的容器`docker start|stop|rm container-id|container-name`
 
 ```bash
-$ docker stop $(docker ps )
+docker stop $(docker ps )
 ```
 
 - 查看某个容器的状态信息`docker inspect container-id|container-name`
 
 ```bash
-$ docker inspect -f "{{.NetworkSettings.IPAddress}}" redis5
-$ docker inspect redis5 | grep IPAddress
+docker inspect -f "{{.NetworkSettings.IPAddress}}" redis5
+docker inspect redis5 | grep IPAddress
 ```
 
 - 查看容器的日志
 
 ```bash
-$ docker logs -tf redis5
+docker logs -tf redis5
 ```
 
 ## 常用镜像使用
@@ -77,76 +77,76 @@ $ docker logs -tf redis5
 docker 有自己的容器管理中心，类似于 github 的项目管理一样，它叫 dockerhub，地址是 https://hub.docker.com。
 
 ### ubuntu
+   
+   ```bash
+   docker run -it ubuntu bash
+   ```
 
-```bash
-$ docker run -it ubuntu bash
-```
+   docker 里的 ubuntu 默认没有安装软件的，所以如果要使用 vim 等工具的话，要手动安装。
 
-docker 里的 ubuntu 默认没有安装软件的，所以如果要使用 vim 等工具的话，要手动安装。
-
-```bash
-$ apt update
-$ apt install vim
-$ vim demo
-```
+   ```bash
+   apt update
+   apt install vim
+   vim demo
+   ```
 
 ### redis
 
 1. 普通启动,此时默认端口是6379，没有密码。
 
-```bash
-$ docker run --name redis5 --rm redis:5
-```
+   ```bash
+   docker run --name redis5 --rm redis:5
+   ```
 
 2. 指定配置文件启动，可以指定密码及其他配置。用 `-v`指定配置文件的挂载（映射），容器名称为 `qqredis`，`redis-server /usr/local/etc/redis/redis.conf`是启动命令。redis.conf 修改 requirepass 和 bind。
 
-```bash
-$ docker run -v /Users/qiqiang/Desktop/docker-supershop/redis/redis.conf:/usr/local/etc/redis/redis.conf -p 6379:6379 --rm --name redis5pass redis:5  redis-server /usr/local/etc/redis/redis.conf
-```
+   ```bash
+   docker run -v /Users/qiqiang/Desktop/docker-supershop/redis/redis.conf:/usr/local/etc/redis/redis.conf -p 6379:6379 --rm --name redis5pass redis:5  redis-server /usr/local/etc/redis/redis.conf
+   ```
 
 ### mysql
 
 1. 简单启动。
+   
+   ```bash
+   docker run --name mysql5.7 --rm -p 3306:3306 -e MYSQL_ROOT_PASSWORD=root mysql/mysql-server:5.7
+   ```
 
-```bash
-$ docker run --name mysql5.7 --rm -p 3306:3306 -e MYSQL_ROOT_PASSWORD=root mysql/mysql-server:5.7
-```
-
-启动完成之后可以打开另一个终端窗口进行连接。
-
-```bash
-$ docker exec -it mysql5.7 bash
-```
+   启动完成之后可以打开另一个终端窗口进行连接。
+   
+   ```bash
+   docker exec -it mysql5.7 bash
+   ```
 
 2. 数据持久化
 
-```bash
-$ docker run --name mysql5.7 -v /Users/qiqiang/Desktop/docker-supershop/mysql/datadir:/var/lib/mysql --rm -p 3306:3306 -e MYSQL_ROOT_PASSWORD=root mysql:5.7
-```
+   ```bash
+   docker run --name mysql5.7 -v /Users/qiqiang/Desktop/docker-supershop/mysql/datadir:/var/lib/mysql --rm -p 3306:3306 -e MYSQL_ROOT_PASSWORD=root mysql:5.7
+   ```
 
 ### openjdk
 
 1. 获取镜像。
 
-```bash
-$ docker run --name openjdk11 --rm -it  openjdk:11
-```
+   ```bash
+   docker run --name openjdk11 --rm -it  openjdk:11
+   ```
 
-启动容器之后，会默认进入 jshell 交互程序，jshell 是 jdk9 加入的新功能。
+   启动容器之后，会默认进入 jshell 交互程序，jshell 是 jdk9 加入的新功能。
 
 2. 用 openjdk 运行我们自己的程序。
 
-```bash
-$ docker run --name openjdk11 --rm -v /Users/qiqiang/Desktop/docker-supershop/java/arthas-boot.jar:/home/arthas-demo.jar openjdk:11 java -jar /home/arthas-demo.jar
-```
+   ```bash
+   docker run --name openjdk11 --rm -v /Users/qiqiang/Desktop/docker-supershop/java/arthas-boot.jar:/home/arthas-demo.jar openjdk:11 java -jar /home/arthas-demo.jar
+   ```
 
 ### nginx
 
 1. 简单启动,将 docker 容器内的80端口映射为宿主机的7070端口。
 
-```bash
-$ docker run --name nginx --rm -p 7070:80 nginx
-```
+   ```bash
+   docker run --name nginx --rm -p 7070:80 nginx
+   ```
 
 2. 外置配置文件启动，搭建文件服务器。
 
@@ -184,7 +184,7 @@ http {
 启动命令,将本地7070端口暴露为文件服务端口。文件存储在 `/Users/qiqiang/Desktop/fileStore` 中
 
 ```bash
-$ docker run --name qqnginx-fileServer --rm -p 7070:7070 -v /Users/qiqiang/Desktop/docker-supershop/nginx/nginx-file.conf:/etc/nginx/nginx.conf -v /Users/qiqiang/Desktop/docker-supershop/nginx/fileStore:/home/fileStore nginx
+docker run --name qqnginx-fileServer --rm -p 7070:7070 -v /Users/qiqiang/Desktop/docker-supershop/nginx/nginx-file.conf:/etc/nginx/nginx.conf -v /Users/qiqiang/Desktop/docker-supershop/nginx/fileStore:/home/fileStore nginx
 ```
 
 # 进阶篇
@@ -209,7 +209,7 @@ RUN mkdir /usr/nginx && \
     yum install -y wget make cmake gcc gcc-c++ \
     yum install -y pcre pcre-devel lib zlib-devel  && \
     yum install -y openssl openssl-devel && \
-    wget http://nginx.org/download/nginx-$NGINX_VERSION.tar.gz && \
+    wget https://nginx.org/download/nginx-$NGINX_VERSION.tar.gz && \
     tar -zxf nginx-$NGINX_VERSION.tar.gz && \
     cd nginx-$NGINX_VERSION && \
     ./configure --prefix=/usr/nginx/nginx-$NGINX_VERSION  --conf-path=/usr/nginx/nginx-$NGINX_VERSION/nginx.conf --with-http_stub_status_module --with-http_ssl_module && \
@@ -220,15 +220,15 @@ CMD [ "/etc/nginx/sbin/nginx","-c","/etc/nginx/nginx.conf","-g","daemon off;" ]
 
 1. 构建 Dockerfile 命令
 
-```bash
-$ docker build -t dfnginx:v1 .
-```
+   ```bash
+   docker build -t dfnginx:v1 .
+   ```
 
 2. 启动容器，访问localhost:7070
 
-```bash
-$ docker run --name dfnxingv1 --rm -p 7070:7070 -v /Users/qiqiang/Desktop/docker-supershop/nginx/nginx-file.conf:/etc/nginx/nginx.conf -v /Users/qiqiang/Desktop/docker-supershop/nginx/fileStore:/home/fileStore dfnginx:v1
-```
+   ```bash
+   docker run --name dfnxingv1 --rm -p 7070:7070 -v /Users/qiqiang/Desktop/docker-supershop/nginx/nginx-file.conf:/etc/nginx/nginx.conf -v /Users/qiqiang/Desktop/docker-supershop/nginx/fileStore:/home/fileStore dfnginx:v1
+   ```
 
 ## docker 容器集群编排 compose
 
@@ -237,8 +237,8 @@ $ docker run --name dfnxingv1 --rm -p 7070:7070 -v /Users/qiqiang/Desktop/docker
 Docker 开放了 docker-compose 的源码在github上，安装教程见 https://github.com/docker/compose/releases。
 
 ```bash
-$ sudo curl -L https://github.com/docker/compose/releases/download/1.24.1/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
-$ sudo chmod +x /usr/local/bin/docker-compose
+sudo curl -L https://github.com/docker/compose/releases/download/1.24.1/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
+sudo chmod +x /usr/local/bin/docker-compose
 ```
 
 ### 编排自己的容器
@@ -247,105 +247,105 @@ $ sudo chmod +x /usr/local/bin/docker-compose
    项目地址 https://github.com/qiqiangvae/ipoem
 2. 分析 Dockerfile
 
-```dockerfile
-FROM java:8
-MAINTAINER qiqiangvae@foxmail.com
-# 添加 jar 包，启动 jar 包。
-ADD ./target/ipoem*.jar /home/ipoem/ipoem.jar
-# 启动jar
-CMD java -jar /home/ipoem/ipoem.jar
-EXPOSE 8111
-FROM nginx
-MAINTAINER qiqiangvae@foxmail.com
-WORKDIR ./src/ipoem-h5
-# h5 文件
-ADD ./src/ipoem-h5/dist/ /home/nginx/ipoem-h5
-# nginx配置
-ADD ./nginx/nginx.conf /etc/nginx/nginx.conf
-CMD ["nginx","-c","/etc/nginx/nginx.conf","-g","daemon off;"]
-
-EXPOSE 7071
-```
+   ```dockerfile
+   FROM java:8
+   MAINTAINER qiqiangvae@foxmail.com
+   # 添加 jar 包，启动 jar 包。
+   ADD ./target/ipoem*.jar /home/ipoem/ipoem.jar
+   # 启动jar
+   CMD java -jar /home/ipoem/ipoem.jar
+   EXPOSE 8111
+   FROM nginx
+   MAINTAINER qiqiangvae@foxmail.com
+   WORKDIR ./src/ipoem-h5
+   # h5 文件
+   ADD ./src/ipoem-h5/dist/ /home/nginx/ipoem-h5
+   # nginx配置
+   ADD ./nginx/nginx.conf /etc/nginx/nginx.conf
+   CMD ["nginx","-c","/etc/nginx/nginx.conf","-g","daemon off;"]
+   
+   EXPOSE 7071
+   ```
 
 3. 附加 nginx 配置
 
-```nginx
-server {
-  listen       7071;
-  server_name  localhost;
-  charset utf-8;
-  #charset koi8-r;
-  #access_log  logs/host.access.log  main;
-  location / {
-    root /home/nginx/ipoem-h5;
-    index index.html;
-  }
-}
-```
+   ```nginx
+   server {
+     listen       7071;
+     server_name  localhost;
+     charset utf-8;
+     #charset koi8-r;
+     #access_log  logs/host.access.log  main;
+     location / {
+       root /home/nginx/ipoem-h5;
+       index index.html;
+     }
+   }
+   ```
 
 4. 分析 docker-compose
 
-```yaml
-version: '3.7'
-services:
-
-  mongo:
-    image: 'mongo:latest'
-    restart: always
-    container_name: mongo
-    volumes:
-      - /Users/qiqiang/Desktop/docker-supershop/docker-compose/mongodata:/data/db
-    ports:
-      - 27017:27017
-    networks:
-      - ipoemnet
-
-  back:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    restart: always
-    container_name: back
-    environment:
-      MONGO_HOST: mongo
-      MONGO_PORT: 27017
-    ports:
-      - 8111:8111
-    depends_on:
-      - mongo
-    networks:
-      - ipoemnet
-
-  h5:
-    build:
-      context: .
-      dockerfile: ./Dockerfile-h5
-    restart: always
-    container_name: h5
-    ports:
-      - 7071:7071
-    networks:
-      - ipoemnet
-
-networks:
-  ipoemnet:
-    driver: bridge
-    name: ipoemnet
-```
+   ```yaml
+   version: '3.7'
+   services:
+   
+     mongo:
+       image: 'mongo:latest'
+       restart: always
+       container_name: mongo
+       volumes:
+         - /Users/qiqiang/Desktop/docker-supershop/docker-compose/mongodata:/data/db
+       ports:
+         - 27017:27017
+       networks:
+         - ipoemnet
+   
+     back:
+       build:
+         context: .
+         dockerfile: ./Dockerfile
+       restart: always
+       container_name: back
+       environment:
+         MONGO_HOST: mongo
+         MONGO_PORT: 27017
+       ports:
+         - 8111:8111
+       depends_on:
+         - mongo
+       networks:
+         - ipoemnet
+   
+     h5:
+       build:
+         context: .
+         dockerfile: ./Dockerfile-h5
+       restart: always
+       container_name: h5
+       ports:
+         - 7071:7071
+       networks:
+         - ipoemnet
+   
+   networks:
+     ipoemnet:
+       driver: bridge
+       name: ipoemnet
+   ```
 
 5. 启动
 
-```bash
-$ docker-compose up
-```
+   ```bash
+   docker-compose up
+   ```
 
 6. 访问 [http://localhost:7071](http://localhost:7071/#/)
 
 7. 停止
 
-```bash
-$ docker-compose down
-```
+   ```bash
+   docker-compose down
+   ```
 
 ## network 容器互联
 
