--- a/docs/java/kits/20.批处理工具类.md
+++ b/docs/java/kits/20.批处理工具类.md
@@ -49,7 +49,7 @@ public void withoutBatchUtils(){
 直接上代码：
 
 ::: tip 参考
-OptionalCollection 是模仿 Optional 定义的集合类的 Optional，参考 [OptionalCollection](40.集合类的 Optional)。
+OptionalCollection 是模仿 Optional 定义的集合类的 Optional，参考 [OptionalCollection](/java/kits/7fb3c5/)。
 :::
 
 ```java
