--- a/docs/middleware/mysql/10.Mysql-next-key-lock加锁规则.md
+++ b/docs/middleware/mysql/10.Mysql-next-key-lock加锁规则.md
@@ -51,8 +51,8 @@ permalink: /middleware/mysql/cb3ed6
 
 第一步初始化表结构和数据。
 
-<code-group>
-   <code-block title="建表语句" active>
+::: code-tabs#sql
+@tab 建表语句
 
 ```sql
 CREATE TABLE `t`
@@ -64,9 +64,7 @@ CREATE TABLE `t`
     KEY  `c` (`c`)
 ) ENGINE = InnoDB;
 ```
-
-   </code-block>
-   <code-block title="造数据" active>
+@tab 造数据
 
 ```sql
 insert into t
@@ -77,9 +75,7 @@ values (0, 0, 0),
        (20, 20, 20),
        (25, 25, 25);
 ```
-
-   </code-block>
-</code-group>
+:::
 
 
 下面开始实战场景分析。
@@ -87,7 +83,7 @@ values (0, 0, 0),
 ### 等值查询间隙锁
 
 | session A                          | session B                        | session C                               |
-| ---------------------------------- | -------------------------------- | --------------------------------------- |
+|------------------------------------|----------------------------------|-----------------------------------------|
 | begin ;                            |                                  |                                         |
 | update t set d = d+1 where id = 7; |                                  |                                         |
 |                                    | insert into t value (8,8,8);(阻塞) |                                         |
