--- a/docs/middleware/mysql/30.开发过程中mysql死锁排查汇总.md
+++ b/docs/middleware/mysql/30.开发过程中mysql死锁排查汇总.md
@@ -17,9 +17,8 @@ permalink: /middleware/mysql/779a1c
 
 造数据
 
-<code-group>
-  <code-block title="建表语句" active>
-
+::: code-tabs#sql
+@tab 建表语句
 ```sql
 CREATE TABLE `t2`
 (
@@ -30,10 +29,7 @@ CREATE TABLE `t2`
     KEY  `c` (`c`)
 ) ENGINE=InnoDB;
 ```
-
-  </code-block>
-  <code-block title="造数据">
-
+@tab 造数据
 ```sql
 drop procedure createData;
 
@@ -50,8 +46,6 @@ end;
 
 call createData()
 ```
-
-  </code-block>
-</code-group>
+:::
 
 ## 删除数据时索引字段类型不匹配死锁
