--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -27,7 +27,7 @@ permalink: /dev/271d86/
 
 ### Github 访问加速
 
-推荐使用 SwitchHosts 工具动态配置 Github 的 hosts，[软件](./#软件)下载见上。
+推荐使用 SwitchHosts 工具动态配置 Github 的 hosts，[软件](#软件)下载见上。
 选择远程 hosts 类型，输入地址 <https://gitlab.com/ineo6/hosts/-/raw/master/next-hosts>。
 
 该项目仓库地址 <https://github.com/ineo6/hosts> 或 <https://gitlab.com/ineo6/hosts>（推荐 gitlab，访问速度快）。
