--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -7,7 +7,7 @@ permalink: /dev/271d86/
 
 分享一些自己好用的软件和网址，记录一些开发者必备的傻瓜式配置，方便忘记的时候快速找到。
 
-## 软件
+## 软件推荐
 
 1. hosts切换工具 [SwitchHosts](https://www.electronjs.org/apps/switchhosts)，强烈推荐；
 2. 好看好用的 Redis GUI工具 [AnotherRedisDesktopManager](https://gitee.com/qishibo/AnotherRedisDesktopManager)。下载或者 MacOS 命令安装`brew install --cask another-redis-desktop-manager`；
@@ -21,9 +21,17 @@ permalink: /dev/271d86/
 10. 开源免费的 kubernetes IDE 开发工具和可视化 Dashboard [Lens](https://github.com/lensapp/lens)；
 11. Zookeeper GUI 工具 [PrettyZoo](https://github.com/vran-dev/PrettyZoo/releases)；
 12. 免费的接口管理和调试工具 [ApiFox](https://www.apifox.cn/)；
-13. 一个免费的 mac 软件下载网址[麦克搜](https://www.imacso.com/)；
 
-## 配置
+
+## 网址推荐
+
+1. 一个免费的 mac 软件下载网址[麦氪搜](https://www.imacso.com/)； 
+2. 开发技术书籍资源网站[搬书匠](http://www.banshujiang.cn/)；
+3. Jdk 下载网站 [injdk](https://www.injdk.cn/)；
+4. 纯净操作系统下载网站 [I TELL YOU](https://next.itellyou.cn/)；
+5. 英文命名神奇，解救你的二级英语水平 [CODEIF](https://unbug.github.io/codelf/)；
+
+## 开发配置
 
 ### Github 访问加速
 
