新增简单脚本

--- a/docs/linux/10.Linux简单有趣的命令.md
+++ b/docs/linux/10.Linux简单有趣的命令.md
@@ -189,7 +189,7 @@ echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
     75192
     ```
 3. **-F** 指定分隔符；
-    
+   
     ```shell
     # -F 指定分隔符为 =
     awk -F '=' '{print $1,$2}' file.txt
@@ -400,3 +400,23 @@ f1  f2
 为什么最后一个命令不是将 d3 改名为 d2 呢？因为d2目录已经存在来，所以不会改名。
 
 总结：目标文件不存在则改名，目标文件存在则移动。
+
+
+
+## 简单的脚本案例
+
+### 循环读取文件每一行并处理
+
+::: warning 无法读取最后一行
+
+`|| [[ -n $(line) ]]`加上这个判断是为了防止最后一个字符没有换行导致无法读取的问题
+
+:::
+
+```shell
+cat field.txt| while read line || [[ -n $(line) ]];
+do
+        echo '- value:' $line
+done
+```
+
