--- a/docs/linux/10.Linux简单有趣的命令.md
+++ b/docs/linux/10.Linux简单有趣的命令.md
@@ -17,7 +17,9 @@ nc 可以建立 TCP 连接
 ```shell
 nc localhost 6379
 ```
+
 连接后可以执行命令
+
 ```text
 set name jonkee
 +OK
@@ -61,7 +63,8 @@ sshpass -p {password} ssh -p 22 {username}@{ip}
 
 ssh 还可以实现跳板机隧道功能。
 
-如本机 **Local** 想要访问 **Server** 的 **Port** 端口，但是 **Server** 是在内网，无法访问，但是跳板机 **Jump** 可以访问 **Server**，而 **Local**
+如本机 **Local** 想要访问 **Server** 的 **Port** 端口，但是 **Server** 是在内网，无法访问，但是跳板机 **Jump** 可以访问 *
+*Server**，而 **Local**
 可以访问跳板机，此时可以使用ssh实现隧道功能。
 
 ```shell
@@ -98,16 +101,16 @@ curl -X POST -d '{"username":"user","password":"pass"}' https://xxx.com/login
 curl -o resp.txt https://www.baidu.com
 ```
 
-| 使用           | 符号   | 说明           |
-|--------------|------|--------------|
-| 代理头          | -A   | User-Agent   |
-| 请求头          | -H   | Header       |
-| 发送 cookie    | -b   |              |
-| 存储响应 cookie  | -c   |              |
-| 发送 body      | -d   |              |
-| 指定 Http 请求方式 | -X   |              |
-| 打印响应头        | -i   |              |
-| 保存响应信息       | -o   |              |
+| 使用           | 符号  | 说明         |
+|--------------|-----|------------|
+| 代理头          | -A  | User-Agent |
+| 请求头          | -H  | Header     |
+| 发送 cookie    | -b  |            |
+| 存储响应 cookie  | -c  |            |
+| 发送 body      | -d  |            |
+| 指定 Http 请求方式 | -X  |            |
+| 打印响应头        | -i  |            |
+| 保存响应信息       | -o  |            |
 
 ### scp 服务器间复制文件
 
@@ -161,15 +164,17 @@ redis-cli -a password -h localhost -p 6379 keys "*" | xargs redis-cli -a passwor
 # -e 表示解释转义字符
 echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
 ```
+
 输出
+
 ```text
 韩信 李白 百里守约
 ```
 
-| 参数    | 解释                         |
-|-------|----------------------------|
-| -p    | 打印需要执行的命令，询问是否执行，输入y或Y确认   |
-| -t    | 打印需要执行的命令，不需要用户确认          |
+| 参数  | 解释                       |
+|-----|--------------------------|
+| -p  | 打印需要执行的命令，询问是否执行，输入y或Y确认 |
+| -t  | 打印需要执行的命令，不需要用户确认        |
 
 ### awk
 
@@ -182,19 +187,19 @@ echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
     ```text
     ps -ef|grep java|awk '{print $2}'
     ```
-    输出
+   输出
     ```text
     67396
     69344
     75192
     ```
 3. **-F** 指定分隔符；
-   
+
     ```shell
     # -F 指定分隔符为 =
     awk -F '=' '{print $1,$2}' file.txt
     ```
-    
+
 4. **-v** 设置变量；
 
    ```shell
@@ -212,19 +217,18 @@ echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
 
     ```shell
     # 按=分割并去重
-    $ awk -F '=' '{print $3}' filename |awk '!a[$0]++'
+    awk -F '=' '{print $3}' filename |awk '!a[$0]++'
     ```
 
 7. 分组；
 
     ```shell
     # 多个分隔符，并按字段分组找出所有个数大于 1 的
-    $ awk -F '[|][$][|]' '{count[$10]++;} END {for(i in count) { if (count[i]>1){print i,count[i]}}}' filename
+    awk -F '[|][$][|]' '{count[$10]++;} END {for(i in count) { if (count[i]>1){print i,count[i]}}}' filename
     ```
 
-NF 代表当前行有多少个字段，即 NF-1代表倒数第二个字段。
-
-NR 代表当前行数。
+   NF 代表当前行有多少个字段，即 NF-1代表倒数第二个字段。
+   NR 代表当前行数。
 
 ### grep 过滤
 
@@ -288,33 +292,31 @@ wc -l filename
 
 ### Vim 快捷键
 
-| 按键              | 功能                                                   |
-| ----------------- | ------------------------------------------------------ |
-| h 或者 ←          | 向左移动                                               |
-| j 或者 ↓          | 向下移动                                               |
-| k 或者 ↑          | 向上移动                                               |
-| l 或者 → 或者空格 | 向右移动                                               |
-| [n]+空格          | 向右移动 n 格                                          |
-| [n]+方向          | 向某个方向移动n次                                      |
-| ctrl+f            | 向下翻页                                               |
-| ctrl+b            | 向上翻页                                               |
-| 0 或者 home       | 移动到该行的第一个字符处                               |
-| $ 或者 end        | 移动到该行的最后一个字符处                             |
-| G                 | 移动到最后一行                                         |
-| H                 | 移动到第一行                                           |
-| [n]G              | 跳转到第 n 行                                          |
-| /key              | 向下搜索关键字                                         |
-| ?key              | 向上搜索关键字                                         |
-| n 或者 N          | 根据/key或者?key的方向重复查找某个关键字。n和N方向相反 |
-| x 或者 X          | x 向后删除，X 向前删除                                 |
-| [n]x              | 连续删除                                               |
-| dd                | 删除当前光标所在行                                     |
-| [n]yy             | 复制一（多）行                                         |
-| p                 | 粘贴                                                   |
-| :w [filename]     | 另存为                                                 |
-| :%d               | 清空所有的内容                                         |
-
-
+| 按键            | 功能                               |
+|---------------|----------------------------------|
+| h 或者 ←        | 向左移动                             |
+| j 或者 ↓        | 向下移动                             |
+| k 或者 ↑        | 向上移动                             |
+| l 或者 → 或者空格   | 向右移动                             |
+| [n]+空格        | 向右移动 n 格                         |
+| [n]+方向        | 向某个方向移动n次                        |
+| ctrl+f        | 向下翻页                             |
+| ctrl+b        | 向上翻页                             |
+| 0 或者 home     | 移动到该行的第一个字符处                     |
+| $ 或者 end      | 移动到该行的最后一个字符处                    |
+| G             | 移动到最后一行                          |
+| H             | 移动到第一行                           |
+| [n]G          | 跳转到第 n 行                         |
+| /key          | 向下搜索关键字                          |
+| ?key          | 向上搜索关键字                          |
+| n 或者 N        | 根据/key或者?key的方向重复查找某个关键字。n和N方向相反 |
+| x 或者 X        | x 向后删除，X 向前删除                    |
+| [n]x          | 连续删除                             |
+| dd            | 删除当前光标所在行                        |
+| [n]yy         | 复制一（多）行                          |
+| p             | 粘贴                               |
+| :w [filename] | 另存为                              |
+| :%d           | 清空所有的内容                          |
 
 ## 压缩命令
 
@@ -401,15 +403,13 @@ f1  f2
 
 总结：目标文件不存在则改名，目标文件存在则移动。
 
-
-
 ## 简单的脚本案例
 
 ### 循环读取文件每一行并处理
 
 ::: warning 无法读取最后一行
 
-`|| [[ -n $(line) ]]`加上这个判断是为了防止最后一个字符没有换行导致无法读取的问题
+` [[ -n $(line) ]]`加上这个判断是为了解决最后一行无法读取的问题
 
 :::
 
