--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -9,27 +9,29 @@ permalink: /dev/271d86/
 
 ## 软件推荐
 
-1. hosts切换工具 [SwitchHosts](https://www.electronjs.org/apps/switchhosts)，强烈推荐；
-2. 好看好用的 Redis GUI工具 [AnotherRedisDesktopManager](https://gitee.com/qishibo/AnotherRedisDesktopManager)。下载或者 MacOS 命令安装`brew install --cask another-redis-desktop-manager`；
-3. MacOS 取色工具 [ColorSlurp](https://apps.apple.com/cn/app/colorslurp/id1287239339?l=en&mt=12)；
-4. 好用的邮箱工具 [Spark](https://sparkmailapp.com/zh)了；
-5. **收费**终端工具 [termius](https://www.termius.com/)。该工具收费，可以网上找破解版；
-6. 免费终端工具 [tabby](https://github.com/Eugeny/tabby/releases)，是 [termius](https://www.termius.com/) 的开源版；
-7. 轻量级 Api 工具，Postman 替代品 [hoppscotch](https://hoppscotch.io/cn/)；
-8. 免费好用的 Markdown 编辑器 [Mark Text](https://marktext.app/)；
-9. 开源免费的图床工具，支持多种存储方式，下载地址 [uPic](https://github.com/gee1k/uPic/releases)；
-10. 开源免费的 kubernetes IDE 开发工具和可视化 Dashboard [Lens](https://github.com/lensapp/lens)；
-11. Zookeeper GUI 工具 [PrettyZoo](https://github.com/vran-dev/PrettyZoo/releases)；
-12. 免费的接口管理和调试工具 [ApiFox](https://www.apifox.cn/)；
+1. hosts切换工具 [**SwitchHosts**](https://www.electronjs.org/apps/switchhosts)，强烈推荐；
+2. 好看好用的 Redis GUI工具 [**AnotherRedisDesktopManager**](https://gitee.com/qishibo/AnotherRedisDesktopManager)。下载或者 MacOS 命令安装`brew install --cask another-redis-desktop-manager`；
+3. MacOS 取色工具 [**ColorSlurp**](https://apps.apple.com/cn/app/colorslurp/id1287239339?l=en&mt=12)；
+4. 好用的邮箱工具 [**Spark**](https://sparkmailapp.com/zh)了；
+5. **收费**终端工具 [**termius**](https://www.termius.com/)。该工具收费，可以网上找破解版；
+6. 免费终端工具 [**tabby**](https://github.com/Eugeny/tabby/releases)，是 [termius](https://www.termius.com/) 的开源版；
+7. 轻量级 Api 工具，Postman 替代品 [**hoppscotch**](https://hoppscotch.io/cn/)；
+8. 免费好用的 Markdown 编辑器 [**Mark Text**](https://marktext.app/)；
+9. 开源免费的图床工具，支持多种存储方式，下载地址 [**uPic**](https://github.com/gee1k/uPic/releases)；
+10. 开源免费的 kubernetes IDE 开发工具和可视化 Dashboard [**Lens**](https://github.com/lensapp/lens)；
+11. Zookeeper GUI 工具 [**PrettyZoo**](https://github.com/vran-dev/PrettyZoo/releases)；
+12. 免费的接口管理和调试工具 [**ApiFox**](https://www.apifox.cn/)；
 
 
 ## 网址推荐
 
-1. 一个免费的 mac 软件下载网址[麦氪搜](https://www.imacso.com/)； 
-2. 开发技术书籍资源网站[搬书匠](http://www.banshujiang.cn/)；
-3. Jdk 下载网站 [injdk](https://www.injdk.cn/)；
-4. 纯净操作系统下载网站 [I TELL YOU](https://next.itellyou.cn/)；
-5. 英文命名神奇，解救你的二级英语水平 [CODEIF](https://unbug.github.io/codelf/)；
+1. 一个免费的 mac 软件下载网址[**麦氪搜**](https://www.imacso.com/)； 
+2. 开发技术书籍资源网站[**搬书匠**](http://www.banshujiang.cn/)；
+3. Jdk 下载网站 [**injdk**](https://www.injdk.cn/)；
+4. 纯净操作系统下载网站 [**I TELL YOU**](https://next.itellyou.cn/)；
+5. 英文命名神奇，解救你的二级英语水平 [**CODEIF**](https://unbug.github.io/codelf/)；
+6. 免费的在线文件转换工具 [**cloudconvert**](https://cloudconvert.com/)；
+7. 完全免费、易于使用、丰富的PDF处理工具 [**ilovepdf**](https://www.ilovepdf.com/zh-cn)；
 
 ## 开发配置
 
