--- a/docs/dev/30.Git常用操作.md
+++ b/docs/dev/30.Git常用操作.md
@@ -37,7 +37,7 @@ git merge origin/master --allow-unrelated-histories
     ```
 
 3. 回滚某个文件
-    
+   
     ```bash
     git checkout HEAD filename
     ```
@@ -62,10 +62,19 @@ git merge origin/master --allow-unrelated-histories
     ```
 
 3. 合并分支
-    
+   
     ```bash
     git merge [name]
     ```
+
+4. 关联本地分支与远程分支
+
+   ```shell
+   git branch --set-upstream-to=origin/remote_branch_name local_branch_name
+   ```
+
+   
+
 
 ## 标签
 
