--- a/docs/linux/10.Linux简单有趣的命令.md
+++ b/docs/linux/10.Linux简单有趣的命令.md
@@ -240,33 +240,42 @@ grep -n 'search_txt' filename
 
 ### sed 文本编辑命令
 
-替换字符串
-
-```shell
-$ sed 's/原字符串/替换字符串/g'
-```
-
-删除行
 ::: danger 注意
 注意`-i`是在源文件修改，`-e`是输出到控制台，如果是修改源文件，需要加上备份文件的后缀，如果不想备份，输入空字符串。
 :::
 
-```shell
-# 删除第 N 行
-sed -i '.bak' 'Nd' filename
-# 删除第 N-M 行
-sed -i '.bak' 'N,Md' filename
-```
+1. 替换字符串
 
-截取行数
+   ```shell
+   sed 's/原字符串/替换字符串/g'
+   ```
 
-```shell
-sed -n '1,10p' filename
-# 截取第1行到第10行并输出到另一个文件
-sed -n '1,10p' filename > new_filename
-# 截取第11行到文件末尾并输出到另一个文件中
-sed -n '11,$p' filename > new_filename
-```
+2. 替换指定行
+
+   ```shell
+   sed '10c hello world' filename	
+   ```
+
+3. 删除行
+
+   ```shell
+   # 删除第 N 行
+   sed -i '.bak' 'Nd' filename
+   # 删除第 N-M 行
+   sed -i '.bak' 'N,Md' filename
+   ```
+
+4. 截取行数
+
+   ```shell
+   sed -n '1,10p' filename
+   # 截取第1行到第10行并输出到另一个文件
+   sed -n '1,10p' filename > new_filename
+   # 截取第11行到文件末尾并输出到另一个文件中
+   sed -n '11,$p' filename > new_filename
+   ```
+
+   
 
 ### wc 文本统计
 
