--- a/docs/linux/10.Linux简单有趣的命令.md
+++ b/docs/linux/10.Linux简单有趣的命令.md
@@ -90,15 +90,17 @@ curl 命令可以用来发送 web 请求。
 # 发送 get 请求
 curl https://www.baidu.com
 # 头信息
-curl -H 'Authorization:mytoken' https://www.baidu.com
+curl -H 'Authorization:my-token' https://www.baidu.com
 # 发送 cookie
-curl -b 'name=jonkee;sex=1' https://www.baidu.com
+curl -b 'name=muan;sex=1' https://www.baidu.com
 # 存储响应 cookie
 curl -c resp_cookie.txt https://www.baidu.com
 # 发送 POST 请求
 curl -X POST -d '{"username":"user","password":"pass"}' https://xxx.com/login
 # 保存响应信息
 curl -o resp.txt https://www.baidu.com
+# 获取响应头
+curl -I https://www.baidu.com
 ```
 
 | 使用           | 符号  | 说明         |
@@ -109,7 +111,8 @@ curl -o resp.txt https://www.baidu.com
 | 存储响应 cookie  | -c  |            |
 | 发送 body      | -d  |            |
 | 指定 Http 请求方式 | -X  |            |
-| 打印响应头        | -i  |            |
+| 打印响应头和内容     | -i  |            |
+| 仅仅打印响应头      | -I  |            |
 | 保存响应信息       | -o  |            |
 
 ### scp 服务器间复制文件
@@ -274,8 +277,6 @@ grep -n 'search_txt' filename
    # 截取第11行到文件末尾并输出到另一个文件中
    sed -n '11,$p' filename > new_filename
    ```
-
-   
 
 ### wc 文本统计
 
