--- a/docs/linux/10.Linux简单有趣的命令.md
+++ b/docs/linux/10.Linux简单有趣的命令.md
@@ -112,7 +112,7 @@ curl -I https://www.baidu.com
 | 发送 body      | -d  |            |
 | 指定 Http 请求方式 | -X  |            |
 | 打印响应头和内容     | -i  |            |
-| 仅仅打印响应头      | -I  |            |
+| 仅仅打印响应头      | -I  | 大写的 i      |
 | 保存响应信息       | -o  |            |
 
 ### scp 服务器间复制文件
