--- a/docs/java/toolUsage/10.Arthas线上排查经验.md
+++ b/docs/java/toolUsage/10.Arthas线上排查经验.md
@@ -19,9 +19,49 @@ curl -O https://arthas.aliyun.com/arthas-boot.jar
 java -jar arthas-boot.jar
 ```
 
-## 常用命令
+## 常用场景
 
 ### 反编译源码
 ```shell
 jad com.example.test
+```
+
+### 执行静态代码
+比如要看看临时目录路径
+```java
+System.getProperty("java.io.tmpdir")
+```
+那么需要先获取`java.lang.System`的类加载器hashcode，然后再执行代码
+
+::: info 指定类加载器
+使用`-c {hashcode}`指定类加载器，如果是Bootstrap可以不指定。
+
+因为hashcode不是固定的，所以用`--classLoaderClass {classLoaderClassName}`指定类加载器可以保证唯一。
+:::
+```shell
+[arthas@1]$ sc -d java.lang.System
+ class-info        java.lang.System                                                                                                                                                                                                        
+ code-source                                                                                                                                                                                                                               
+ name              java.lang.System                                                                                                                                                                                                        
+ isInterface       false                                                                                                                                                                                                                   
+ isAnnotation      false                                                                                                                                                                                                                   
+ isEnum            false                                                                                                                                                                                                                   
+ isAnonymousClass  false                                                                                                                                                                                                                   
+ isArray           false                                                                                                                                                                                                                   
+ isLocalClass      false                                                                                                                                                                                                                   
+ isMemberClass     false                                                                                                                                                                                                                   
+ isPrimitive       false                                                                                                                                                                                                                   
+ isSynthetic       false                                                                                                                                                                                                                   
+ simple-name       System                                                                                                                                                                                                                  
+ modifier          final,public                                                                                                                                                                                                            
+ annotation                                                                                                                                                                                                                                
+ interfaces                                                                                                                                                                                                                                
+ super-class       +-java.lang.Object                                                                                                                                                                                                      
+ class-loader                                                                                                                                                                                                                              
+ classLoaderHash   null                                                                                                                                                                                                                    
+
+Affect(row-cnt:1) cost in 39 ms.
+
+[arthas@1]$ ognl '@java.lang.System@getProperty("java.io.tmpdir")'
+@String[/tmp]
 ```
