--- a/docs/linux/10.Linux简单有趣的命令.md
+++ b/docs/linux/10.Linux简单有趣的命令.md
@@ -290,17 +290,17 @@ wc -l filename
 
 ### grep 匹配
 
-+ -C n 或者 --context=n 显示前后 n 行的内容。
++ -C 10 或者 --context=10 显示前后 10 行的内容。
 
-+ -A n 或者 --after-context=n 显示之后 n 行的内容。
++ -A 10 或者 --after-context=10 显示之后 10 行的内容。
 
-+ -B n 或者 --before-context=n 显示之前 n 行的内容。
++ -B 10 或者 --before-context=10 显示之前 10 行的内容。
 
-+ -v 显示不匹配的（忽略匹配的）。
++ -v 显示不匹配的（忽略匹配的，即**取反**）。
 
-+ -n 显示行数限制。
++ -n 显示行号。
 
-### Vim 快捷键
+### vim 快捷键
 
 | 按键            | 功能                               |
 |---------------|----------------------------------|
