--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -29,9 +29,17 @@ permalink: /dev/271d86/
 2. 开发技术书籍资源网站[**搬书匠**](http://www.banshujiang.cn/)；
 3. Jdk 下载网站 [**injdk**](https://www.injdk.cn/)；
 4. 纯净操作系统下载网站 [**I TELL YOU**](https://next.itellyou.cn/)；
-5. 英文命名神奇，解救你的二级英语水平 [**CODEIF**](https://unbug.github.io/codelf/)；
+5. 英文命名神器，解救你的二级英语水平 [**CODEIF**](https://unbug.github.io/codelf/)；
 6. 免费的在线文件转换工具 [**cloudconvert**](https://cloudconvert.com/)；
 7. 完全免费、易于使用、丰富的PDF处理工具 [**ilovepdf**](https://www.ilovepdf.com/zh-cn)；
+
+## IDEA 插件推荐
+
+1. [Alibaba Java Coding Guidelines](https://plugins.jetbrains.com/plugin/10046-alibaba-java-coding-guidelines)阿里巴巴java编码规范指南；
+2. [Apifox Helper](https://plugins.jetbrains.com/plugin/20549-apifox-helper)导出Api接口到[**ApiFox**](https://www.apifox.cn/)；
+3. [Rainbow Brackets](https://plugins.jetbrains.com/plugin/10080-rainbow-brackets)给你的代码加点颜色；
+4. [Sequence Diagram](https://plugins.jetbrains.com/plugin/8286-sequence-diagram)生成代码时序图的插件；
+5. [Translation](https://plugins.jetbrains.com/plugin/8579-translation)翻译插件，解救你的二级英语；
 
 ## 开发配置
 
