--- a/docs/java/toolUsage/10.Arthas线上排查经验.md
+++ b/docs/java/toolUsage/10.Arthas线上排查经验.md
@@ -19,6 +19,11 @@ curl -O https://arthas.aliyun.com/arthas-boot.jar
 java -jar arthas-boot.jar
 ```
 
+连接已启动的arthas
+```shell
+telnet localhost 3658
+```
+
 ## 常用场景
 
 ### 反编译源码
