--- a/docs/linux/10.Linux简单有趣的命令.md
+++ b/docs/linux/10.Linux简单有趣的命令.md
@@ -419,12 +419,12 @@ f1  f2
 
 ::: warning 无法读取最后一行
 
-` [[ -n $(line) ]]`加上这个判断是为了解决最后一行无法读取的问题
+` [[ -n ${line} ]]`加上这个判断是为了解决最后一行无法读取的问题
 
 :::
 
 ```shell
-cat field.txt| while read line || [[ -n $(line) ]];
+cat field.txt| while read line || [[ -n ${line} ]];
 do
         echo '- value:' $line
 done
