--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -40,6 +40,7 @@ permalink: /dev/271d86/
 3. [Rainbow Brackets](https://plugins.jetbrains.com/plugin/10080-rainbow-brackets)给你的代码加点颜色；
 4. [Sequence Diagram](https://plugins.jetbrains.com/plugin/8286-sequence-diagram)生成代码时序图的插件；
 5. [Translation](https://plugins.jetbrains.com/plugin/8579-translation)翻译插件，解救你的二级英语；
+6. [GsonFormatPlus](https://plugins.jetbrains.com/plugin/14949-gsonformatplus)将json转为实体类，少写一些代码多摸一点鱼;
 
 ## 开发配置
 
