--- a/docs/java/toolUsage/10.Arthas线上排查经验.md
+++ b/docs/java/toolUsage/10.Arthas线上排查经验.md
@@ -16,7 +16,7 @@ Arthas 是 Alibaba 开源的 Java 诊断工具。
 
 ```shell
 curl -O https://arthas.aliyun.com/arthas-boot.jar
-java -jar arthas-boot.jar
+java -jar arthas-boot.jar --repo-mirror aliyun --use-http
 ```
 
 连接已启动的arthas
