--- a/docs/linux/10.Linux简单有趣的命令.md
+++ b/docs/linux/10.Linux简单有趣的命令.md
@@ -179,7 +179,7 @@ echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
 | -p  | 打印需要执行的命令，询问是否执行，输入y或Y确认 |
 | -t  | 打印需要执行的命令，不需要用户确认        |
 
-### awk
+### awk 文本coding
 
 1. 每行按空格或TAB分割，输出文本中的1、4项；
     ```shell
@@ -233,13 +233,37 @@ echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
    NF 代表当前行有多少个字段，即 NF-1代表倒数第二个字段。
    NR 代表当前行数。
 
-### grep 过滤
+### grep 过滤神器
 
-查找显示行号
+1. -C 10 或者 --context=10 显示前后 10 行的内容；
 
-```shell
-grep -n 'search_txt' filename
-```
+2. -A 10 或者 --after-context=10 显示之后 10 行的内容；
+
+3. -B 10 或者 --before-context=10 显示之前 10 行的内容；
+
+4. -v 显示不匹配的（忽略匹配的，即**取反**）;
+
+5. -n 显示行号；
+
+   ```shell
+   grep -n 'search_txt' filename
+   ```
+
+### split 文件分割
+
+1. 按行分割，比sed命令截取好用；
+
+   ```shell
+   split -l 1000 data.csv prefix
+   ```
+
+2. 按大小分割；
+
+   ```shell
+   split -b 1000 data.csv prefix
+   ```
+
+   
 
 ### sed 文本编辑命令
 
@@ -256,21 +280,23 @@ grep -n 'search_txt' filename
 2. 替换指定行
 
    ```shell
+   # 替换第10行的文本
    sed '10c hello world' filename	
    ```
 
 3. 删除行
 
    ```shell
-   # 删除第 N 行
-   sed -i '.bak' 'Nd' filename
-   # 删除第 N-M 行
-   sed -i '.bak' 'N,Md' filename
+   # 删除第 10 行
+   sed -i '.bak' '10d' filename
+   # 删除第 10-20 行
+   sed -i '.bak' '10,20d' filename
    ```
 
 4. 截取行数
 
    ```shell
+   # 截取第1行到第10行
    sed -n '1,10p' filename
    # 截取第1行到第10行并输出到另一个文件
    sed -n '1,10p' filename > new_filename
@@ -287,18 +313,6 @@ grep -n 'search_txt' filename
 ```shell
 wc -l filename
 ```
-
-### grep 匹配
-
-+ -C 10 或者 --context=10 显示前后 10 行的内容。
-
-+ -A 10 或者 --after-context=10 显示之后 10 行的内容。
-
-+ -B 10 或者 --before-context=10 显示之前 10 行的内容。
-
-+ -v 显示不匹配的（忽略匹配的，即**取反**）。
-
-+ -n 显示行号。
 
 ### vim 快捷键
 
@@ -426,7 +440,7 @@ f1  f2
 ```shell
 cat field.txt| while read line || [[ -n ${line} ]];
 do
-        echo '- value:' $line
+  echo '- value:' $line
 done
 ```
 
