--- a/docs/linux/10.Linux简单有趣的命令.md
+++ b/docs/linux/10.Linux简单有趣的命令.md
@@ -103,17 +103,17 @@ curl -o resp.txt https://www.baidu.com
 curl -I https://www.baidu.com
 ```
 
-| 使用           | 符号  | 说明         |
-|--------------|-----|------------|
-| 代理头          | -A  | User-Agent |
-| 请求头          | -H  | Header     |
-| 发送 cookie    | -b  |            |
-| 存储响应 cookie  | -c  |            |
-| 发送 body      | -d  |            |
-| 指定 Http 请求方式 | -X  |            |
-| 打印响应头和内容     | -i  |            |
-| 仅仅打印响应头      | -I  | 大写的 i      |
-| 保存响应信息       | -o  |            |
+| 使用           | 符号 | 说明         |
+|--------------|----|------------|
+| 代理头          | -A | User-Agent |
+| 请求头          | -H | Header     |
+| 发送 cookie    | -b |            |
+| 存储响应 cookie  | -c |            |
+| 发送 body      | -d |            |
+| 指定 Http 请求方式 | -X |            |
+| 打印响应头和内容     | -i |            |
+| 仅仅打印响应头      | -I | 大写的 i      |
+| 保存响应信息       | -o |            |
 
 ### scp 服务器间复制文件
 
@@ -174,10 +174,10 @@ echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
 韩信 李白 百里守约
 ```
 
-| 参数  | 解释                       |
-|-----|--------------------------|
-| -p  | 打印需要执行的命令，询问是否执行，输入y或Y确认 |
-| -t  | 打印需要执行的命令，不需要用户确认        |
+| 参数 | 解释                       |
+|----|--------------------------|
+| -p | 打印需要执行的命令，询问是否执行，输入y或Y确认 |
+| -t | 打印需要执行的命令，不需要用户确认        |
 
 ### awk 文本coding
 
@@ -214,6 +214,8 @@ echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
    ```shell
    # 只输出第列的值等于2的行
    awk -F '=' '{if ($2 == 2) print $1,$2}' file.txt
+   # 指定多个分隔符，如 |$|
+   awk -F '[|][$][|]' '{if ($2 == 2) print $1,$2}' file.txt
    ```
 
 6. 去重；
@@ -232,6 +234,21 @@ echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
 
    NF 代表当前行有多少个字段，即 NF-1代表倒数第二个字段。
    NR 代表当前行数。
+
+   相关函数：
+
+| 函数                                 | 说明                                              |
+|------------------------------------|-------------------------------------------------|
+| length(str)                        | 	返回字符串 str 的长度。                                 |
+| substr(str, start, length)         | 	返回字符串 str 从 start 开始，长度为 length 的子串。           |
+| split(str, arr, sep)	              | 把字符串 str 以分隔符 sep 分割成若干个部分，并将它们存储到数组 arr 中。     |
+| gsub(regexp, replacement, str)     | 	在字符串 str 中，用 replacement 替换所有匹配到的正则表达式 regexp。 |
+| sub(regexp, replacement, str)	     | 在字符串 str 中，用 replacement 替换第一个匹配到的正则表达式 regexp。 |
+| index(str, substr)                 | 	查找字符串 str 中的子串 substr 第一次出现的位置。如果没有找到，则返回 0。   |
+| tolower(str)	                      | 将字符串 str 转换成小写字母。                               |
+| toupper(str)	                      | 将字符串 str 转换成大写字母。                               |
+| sprintf(format, expr1, expr2, ...) | 	类似于 C 语言中的 sprintf() 函数，用于格式化输出。               |
+| rand()                             | 	返回一个 0 到 1 之间的随机数。                             |
 
 ### grep 过滤神器
 
@@ -262,8 +279,6 @@ echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
    ```shell
    split -b 1000 data.csv prefix
    ```
-
-   
 
 ### sed 文本编辑命令
 
@@ -313,6 +328,20 @@ echo -e "韩信\t李白\t百里守约" | xargs -d "\t" echo
 ```shell
 wc -l filename
 ```
+
+::: warning wc -l命令时发现少了一行
+如果在使用 wc -l 命令时发现少了一行，请注意以下几个问题：
+
+1. 换行符问题：wc 命令计算行数时，是根据换行符来判断的。如果您的文件最后一行没有以换行符结尾，那么 wc -l 命令就会将该行计算为不完整的一行，从而导致行数少一行。
+2. 文件编码问题：如果您的文件是以 Unicode 编码（如 UTF-8）保存的，并且文件头部没有明确指定编码格式，则 wc -l 命令可能会误判换行符的位置，导致行数计算错误。
+3. 行尾空格问题：如果您的文件最后一行有多余的空格或制表符，那么 wc -l 命令就会将这些空格或制表符也计算为一行的内容，从而导致行数计算错误。
+
+如果您遇到了以上问题，可以尝试以下解决方案：
+
+1. 检查文件是否以换行符结尾，如果没有，请添加一个换行符。
+2. 如果文件使用 Unicode 编码，请在文件头部添加明确的编码格式，例如 # -*- coding: utf-8 -*-。
+3. 检查最后一行是否有多余的空格或制表符，如果有，请删除它们。
+:::
 
 ### vim 快捷键
 
