新增软件说明

--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -21,6 +21,7 @@ permalink: /dev/271d86/
 10. 开源免费的 kubernetes IDE 开发工具和可视化 Dashboard [**Lens**](https://github.com/lensapp/lens)；
 11. Zookeeper GUI 工具 [**PrettyZoo**](https://github.com/vran-dev/PrettyZoo/releases)；
 12. 免费的接口管理和调试工具 [**ApiFox**](https://www.apifox.cn/)；
+13. BT种子下载工具 [**qbittorrent**](https://github.com/qbittorrent/qBittorrent)，[tracker 配置地址](https://github.com/ngosang/trackerslist/blob/master/trackers_all.txt)s；
 
 
 ## 网址推荐
@@ -32,6 +33,7 @@ permalink: /dev/271d86/
 5. 英文命名神器，解救你的二级英语水平 [**CODEIF**](https://unbug.github.io/codelf/)；
 6. 免费的在线文件转换工具 [**cloudconvert**](https://cloudconvert.com/)；
 7. 完全免费、易于使用、丰富的PDF处理工具 [**ilovepdf**](https://www.ilovepdf.com/zh-cn)；
+8. 免费的静态服务器资源托管网站[**Vercel**](https://vercel.com)；s
 
 ## IDEA 插件推荐
 
