--- a/docs/cloudNative/docker/10.docker基本使用.md
+++ b/docs/cloudNative/docker/10.docker基本使用.md
@@ -1,8 +1,8 @@
 ---
 title: docker 基本使用
 date: 2021-11-26 13:20:21
-tags: docker
-categories: 云原生
+tag: docker
+category: 云原生
 summary: Docker 是一个开源的应用容器引擎，基于 Go 语言 并遵从Apache2.0协议开源。Docker 可以让开发者打包他们的应用以及依赖包到一个轻量级、可移植的容器中，然后发布到任何流行的 Linux 机器上，也可以实现虚拟化。
 permalink: /cloudNative/docker/d3cfc6
 ---
