--- a/docs/cloudNative/k8s/20.k8s之Job与CronJob.md
+++ b/docs/cloudNative/k8s/20.k8s之Job与CronJob.md
@@ -1,8 +1,8 @@
 ---
 title: k8s之Job与CronJob
 date: 2022-05-20 21:30:15
-tags: k8s
-categories: k8s
+tag: k8s
+category: k8s
 summary: null
 permalink: /cloudNative/k8s/db014d/
 ---
