--- a/docs/cloudNative/k8s/50.Ubuntu使用kubeadm安装k8s集群.md
+++ b/docs/cloudNative/k8s/50.Ubuntu使用kubeadm安装k8s集群.md
@@ -190,7 +190,7 @@ net-conf.json: |
 
 :::  details 截止 2022-8-15 完成配置如下：
 ```yaml
-@include(@document/k8s/kube-flannel.yml)
+<!-- @include: @document/k8s/kube-flannel.yml -->
 ```
 :::
 
