--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -91,3 +91,17 @@ ZSH_THEME="steeef"
 /bin/zsh -c "$(curl -fsSL https://gitee.com/cunkai/HomebrewCN/raw/master/Homebrew.sh)"
 ```
 
+### vim 配置
+
+在`~/.vimrc`中添加如下配置，如果没有该文件则新建文件。
+
+```
+# 设置编码格式
+set encoding=utf-8
+# 设置行号
+set number
+# 设置高亮
+syntax on
+# 自动缩进
+set autoindent
+```
