新增镜像中心地址收录

--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -33,7 +33,15 @@ permalink: /dev/271d86/
 5. 英文命名神器，解救你的二级英语水平 [**CODEIF**](https://unbug.github.io/codelf/)；
 6. 免费的在线文件转换工具 [**cloudconvert**](https://cloudconvert.com/)；
 7. 完全免费、易于使用、丰富的PDF处理工具 [**ilovepdf**](https://www.ilovepdf.com/zh-cn)；
-8. 免费的静态服务器资源托管网站[**Vercel**](https://vercel.com)；s
+8. 免费的静态服务器资源托管网站[**Vercel**](https://vercel.com)；
+
+
+## 镜像中心
+
+1. [中科大镜像中心](https://mirrors.ustc.edu.cn/)，网址`https://mirrors.ustc.edu.cn/`;
+2. [阿里云镜像中心](http://mirrors.aliyun.com/)，网址`http://mirrors.aliyun.com/`;
+2. [清华大学镜像中心](https://mirrors.tuna.tsinghua.edu.cn/)，网址`https://mirrors.tuna.tsinghua.edu.cn/`;
+2. [网易镜像中心](https://mirrors.163.com/)，网址`https://mirrors.163.com/`;
 
 ## IDEA 插件推荐
 
