--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -22,7 +22,7 @@ permalink: /dev/271d86/
 11. Zookeeper GUI 工具 [**PrettyZoo**](https://github.com/vran-dev/PrettyZoo/releases)；
 12. 免费的接口管理和调试工具 [**ApiFox**](https://www.apifox.cn/)；
 13. BT种子下载工具 [**qbittorrent**](https://github.com/qbittorrent/qBittorrent)，[tracker 配置地址](https://github.com/ngosang/trackerslist/blob/master/trackers_all.txt)s；
-
+14. macos控制外接显示器的小工具 [MonitorControl](https://github.com/MonitorControl/MonitorControl/releases)；
 
 ## 网址推荐
 
