--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -23,6 +23,7 @@ permalink: /dev/271d86/
 12. 免费的接口管理和调试工具 [**ApiFox**](https://www.apifox.cn/)；
 13. BT种子下载工具 [**qbittorrent**](https://github.com/qbittorrent/qBittorrent)，[tracker 配置地址](https://github.com/ngosang/trackerslist/blob/master/trackers_all.txt)s；
 14. macos控制外接显示器的小工具 [MonitorControl](https://github.com/MonitorControl/MonitorControl/releases)；
+15. jvm可视化分析工具[VisualVm](https://visualvm.github.io/download.html)，下载后需要配置Java环境；
 
 ## 网址推荐
 
