--- a/docs/java/concurrency/10.造火箭从synchronized开始.md
+++ b/docs/java/concurrency/10.造火箭从synchronized开始.md
@@ -12,16 +12,12 @@ permalink: /java/concurrency/505578
 
 ![对象头](https://qiqiang.oss-cn-hangzhou.aliyuncs.com/muan/objectHeader.jpeg)
 
-
-
-| 原生类型 | 内存大小（byte） | 原生类型 | 内存大小（byte） |
-| -------- | ---------------- | -------- | ---------------- |
-| boolean  | 1                | byte     | 1                |
-| short    | 2                | char     | 2                |
-| int      | 4                | float    | 4                |
-| long     | 8                | double   | 8                |
-
-
+| 原生类型    | 内存大小（byte） | 原生类型   | 内存大小（byte） |
+|---------|------------|--------|------------|
+| boolean | 1          | byte   | 1          |
+| short   | 2          | char   | 2          |
+| int     | 4          | float  | 4          |
+| long    | 8          | double | 8          |
 
 ```java
 concurrency.ObjectDemo object internals:
@@ -38,10 +34,11 @@ Space losses: 0 bytes internal + 6 bytes external = 6 bytes total
 代码如下：
 
 ```xml
+
 <dependency>
-  <groupId>org.openjdk.jol</groupId>
-  <artifactId>jol-core</artifactId>
-  <version>0.16</version>
+    <groupId>org.openjdk.jol</groupId>
+    <artifactId>jol-core</artifactId>
+    <version>0.16</version>
 </dependency>
 ```
 
@@ -61,9 +58,9 @@ public class ObjectDemo {
 ### 升级过程
 
 1. 一个对象默认是无锁或者可偏向无锁状态。
-1. 当被某个线程加锁后变为偏向锁状态。
-1. 多个线程无竞争交替获取锁，该锁升级为轻量级锁。
-1. 一个线程占有锁，其它线程尝试获取该锁，该锁升级为重量级锁。
+2. 当被某个线程加锁后变为偏向锁状态。
+3. 多个线程无竞争交替获取锁，该锁升级为轻量级锁。
+4. 一个线程占有锁，其它线程尝试获取该锁，该锁升级为重量级锁。
 
 ## 抛出的问题
 
@@ -215,7 +212,8 @@ public class Example3 {
 00000000 00000000 00000000 00000000 00000000 00000000 00000000 00000001 
 ```
 
-刚开始是无锁状态，加锁之后变为轻量级锁，释放之后又变为无锁状态。除了锁状态位以外的位置，都是记录的线程栈中Lock Record锁记录的指针，即`11 00001000 11001010 01001001 111000`。
+刚开始是无锁状态，加锁之后变为轻量级锁，释放之后又变为无锁状态。除了锁状态位以外的位置，都是记录的线程栈中Lock
+Record锁记录的指针，即`11 00001000 11001010 01001001 111000`。
 ​
 
 关闭偏向锁延迟看看。-XX:BiasedLockingStartupDelay=0。
@@ -228,7 +226,8 @@ public class Example3 {
 00000000 00000000 01111111 11000000 00111101 10000000 10001000 00000101 
 ```
 
-结果完全不一样了，刚开始的时候是无论什么时候都是偏向锁状态，只是在加锁和释放锁之后 mark word 中都记录了当前**偏向线程的id（前54位）**。
+结果完全不一样了，刚开始的时候是无论什么时候都是偏向锁状态，只是在加锁和释放锁之后 mark word 中都记录了当前**偏向线程的id（前54位）
+**。
 那这个id是不是真是当前偏向线程的id呢，得找办法看一下。修改代码并关闭偏向锁延迟
 
 ```java
@@ -415,7 +414,8 @@ t1  加锁了--------
 00000000 00000000 00000000 00000000 00000000 00000000 00000000 00000001 
 ```
 
-初始状态还是可偏向状态的锁，main 加锁后变为偏向锁，t1 来竞争的时候main还未释放锁，此时锁升级为重量级锁，t1拿到锁之后还是重量级锁（指向同一个监视器），当所有线程都释放锁之后，锁降级为无锁状态。
+初始状态还是可偏向状态的锁，main 加锁后变为偏向锁，t1
+来竞争的时候main还未释放锁，此时锁升级为重量级锁，t1拿到锁之后还是重量级锁（指向同一个监视器），当所有线程都释放锁之后，锁降级为无锁状态。
 
 ## ObjectMonitor 监视器
 
@@ -566,5 +566,5 @@ t1--thread executed
 ## 参考文档
 
 1. [https://www.infoq.cn/article/e9aqaxqpr76s4kzez7q2](https://www.infoq.cn/article/e9aqaxqpr76s4kzez7q2)
-1. [https://cloud.tencent.com/developer/article/1759447](https://cloud.tencent.com/developer/article/1759447)
+2. [https://cloud.tencent.com/developer/article/1759447](https://cloud.tencent.com/developer/article/1759447)
 
