--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -22,8 +22,10 @@ permalink: /dev/271d86/
 11. Zookeeper GUI 工具 [**PrettyZoo**](https://github.com/vran-dev/PrettyZoo/releases)；
 12. 免费的接口管理和调试工具 [**ApiFox**](https://www.apifox.cn/)；
 13. BT种子下载工具 [**qbittorrent**](https://github.com/qbittorrent/qBittorrent)，[tracker 配置地址](https://github.com/ngosang/trackerslist/blob/master/trackers_all.txt)s；
-14. macos控制外接显示器的小工具 [MonitorControl](https://github.com/MonitorControl/MonitorControl/releases)；
+14. MacOS 控制外接显示器的小工具，可以调节亮度和声音 [MonitorControl](https://github.com/MonitorControl/MonitorControl/releases)；
 15. jvm可视化分析工具[VisualVm](https://visualvm.github.io/download.html)，下载后需要配置Java环境；
+16. MacOS 免费截图工具[iShot](https://www.better365.cn/ishot.html)，想要高级功能可以买断pro版本；
+17. MacOS VPN 代理工具[ClashX](https://github.com/yichengchen/clashX/releases)和增强版[ClashX Pro](https://install.appcenter.ms/users/clashx/apps/clashx-pro/distribution_groups/public)；
 
 ## 网址推荐
 
