新增软件推荐

--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -55,6 +55,14 @@ permalink: /dev/271d86/
 5. [Translation](https://plugins.jetbrains.com/plugin/8579-translation)翻译插件，解救你的二级英语；
 6. [GsonFormatPlus](https://plugins.jetbrains.com/plugin/14949-gsonformatplus)将json转为实体类，少写一些代码多摸一点鱼;
 
+## Chromium 浏览器引擎插件推荐
+
+1. 网页Json数据格式化插件[JSON Formatter](https://chrome.google.com/webstore/detail/json-formatter/bcjindcccaagfpapjjmafapmmgkkhgoa)；
+2. 修改请求头信息的插件[ModHeader](https://chrome.google.com/webstore/detail/modheader-modify-http-hea/idgpnmonknjnojddfkpgkljpfnnfcklj)；
+3. 广告拦截插件[uBlock Origin](https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm)；
+4. 腾讯出品的划词翻译插件[腾讯翻译](https://chrome.google.com/webstore/detail/%E8%85%BE%E8%AE%AF%E7%BF%BB%E8%AF%91/lkjkfecdnfjopaeaibboihfkmhdjmanm)；
+5. 标签页插件[WeTab](https://chrome.google.com/webstore/detail/wetab-%E5%85%8D%E8%B4%B9chatgpt%E6%96%B0%E6%A0%87%E7%AD%BE%E9%A1%B5/aikflfpejipbpjdlfabpgclhblkpaafo)和[iTab](https://chrome.google.com/webstore/detail/itab%E6%96%B0%E6%A0%87%E7%AD%BE%E9%A1%B5%E5%85%8D%E8%B4%B9chatgpt/mhloojimgilafopcmlcikiidgbbnelip)；
+
 ## 开发配置
 
 ### Github 访问加速
