--- a/docs/note/systemArchitecture/1.计算机硬件.md
+++ b/docs/note/systemArchitecture/1.计算机硬件.md
@@ -100,7 +100,6 @@ $$
    $$
    1条指令总执行时间+(总指令数-1)*流水线周期
    $$
-   
 
 3. 流水线吞吐率计算：吞吐率即单位时间内执行指令的条数。
    $$
@@ -143,3 +142,56 @@ Cache由控制部分和存储器组成，存储器存储数据，控制部分判
 空间局部性原理：相邻的地址可能会被访问，比如数组；
 
 时间局部性原理：相近的时间内，同一个地址可能会被再次访问；
+
+### 磁盘
+
+磁盘有正反两个盘面，每个盘面有多个同心圆，每个同心圆是一个磁道，每个同心圆又被分为多个扇区，数据存放在扇区中。
+
+磁盘有一个参数叫转速，指的是每秒转动的次数。磁头首先要寻找到对应的磁道，然后等待磁盘进行周期旋转，旋转到指定的扇区才能读取对应的数据。所以有如下存取时间公式：
+$$
+存取时间=寻道时间+等待时间
+$$
+寻道时间指磁头移动到磁道所需要的时间；等待时间指数据所在扇区转动到磁头下方所用的时间。
+
+#### 磁盘调度算法
+
+* 先来先服务FCFS：根据进程请求访问磁盘的先手顺序进行调度；
+* 最短寻道时间有限SSTF：找到离当前所在磁道最近的进行调度，如果当前磁头所在磁道为5，现在需要有1,3,6三个磁道需要访问，虽然6在最后，但是会优先调度到第6磁道。这种算法可能会导致1永远无法调度；
+* 单项扫描调度算法SCAN：磁头按照一个方向一直移动，直到无法移动再掉头。
+* 扫描算法CSCAN：扫描算法又称为电梯算法，磁头可以双向移动，磁头会选择当前磁道最近的磁道访问，按照这个方向扫描，直到没有请求才会掉头。这个调度就跟电梯类型，电梯会朝着一个方向移动，直到所有的楼层都到了才会掉头。
+
+
+
+## 输入输出技术
+
+### 内存与接口地址独立编址方法
+
+### 内存与接口地址统一编址方法
+
+### 计算机与外设数据交互方式
+
+* 程序控制（查询）方式：CPU主动查询外设是否完成数据传输（轮询），效率极低；
+* 程序中断方式：外设完成数据传输之后，向CPU发送中断信号，等待CPU处理数据，此方式效率相对较高。**中断响应时间**指的是从发出中断请求到开始进入中断处理程序之间的耗时。**中断处理时间**指的是从中断处理开始到中断处理结束的耗时。**中断向量**提供中断服务程序的入口地址。多级中断嵌套，使用堆栈来保护断点和现场；
+* DMA方式（注解主存存取）：CPU只需要完成必要的初始化等操作，数据传输的整个过程都有DMA控制器来完成，在主存和外设之间建立直接的数据通道，效率很高；
+
+在一个总线周期结束之后，CPU会响应DMA请求开始读取数据；CPU响应程序中断方式请求是在一条指令执行结束时读取数据；
+
+### 总线
+
+总线指计算机设备和设备之间传输信息的公共数据通道，总线是连接计算机硬件系统内多种设备的通信线路，它的一个重要特征是由总线上的所有设备共享，因此可以将计算机系统内的多种设备连接到总线上。
+
+#### 总线分类：
+
+* 内部总线：内部芯片级别的总线，芯片与处理器之间的通信总线；
+* 系统总线：是板级总线，用于计算机内各部分之间的连接，具体分为（重点考的）：
+   * 数据总线：并行数据传输位数；
+   * 地址总线：系统可管理的内存空间大小
+   * 控制总线：传送控制命令
+* 外部总线：微机和外部设备的总线，如USB；
+
+#### 单工、半双工、全双工
+
+* 单工：数据传输只在一个方向上传输，方向是固定的，不能实现双向通信；
+* 半双工：半双工传输方向可以切换，允许数据在两个方向上传输。但是某个时刻，只允许数据在一个方向上传输，可以基本双向通信；
+* 全双工：全双工允许数据同时在两个方向传输，发送和接收完全独立，在发送的同时可以接收信号，或者在接收的同时可以发送。它要求发送和接收设备都要有独立的发送和接收能力；
+
